--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -21,7 +21,7 @@ copyright = ""
 ############################
 
 # Name of Academic theme folder in `themes/`.
-theme = "Ocean"
+theme = "academic"
 
 # Get last modified date for content from Git?
 enableGitInfo = false
