--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: git-gateway
   branch: master
 media_folder: 'static/img/'
+google_analytics: UA-180310893-1
 public_folder: 'img'
 collections:
   - name: authors
