--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -32,5 +32,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
     name = "CV"
-    url = "files/Resume_with_October_Updates.pdf"
+    url = "files/Saquib_Ahmad_Resume _december.pdf"
     weight = 70
